--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .heading {
     width: 100%;
 }
+
+h4{
+    position: sticky;
+    top: 1;
+    z-index: 0;
+    background-color: gray;
+}
+
+body{
+text-align: center;
+}
